fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4139,50 +4139,56 @@ stacksidebar row {
 placessidebar {
   background-color: transparent;
   background-image: linear-gradient(to right, #171e27 40px, #161925 35px, #161925 36px, #161925 36px, #161925 99%, #161925 100%); }
-  placessidebar row {
-    padding: 2px 11px; }
-    placessidebar row.sidebar-row {
-      margin: 0;
-      border-radius: 0; }
-      placessidebar row.sidebar-row label {
-        color: #C3C7D1;
-        padding-left: 30px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebarrow-icon {
-        color: #9ecfa2; }
-      placessidebar row.sidebar-row:hover {
-        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0, 0, 0, 0.76);
+  placessidebar row.activatable {
+    padding: 2px 11px;
+    margin: 0;
+    border-radius: 0; }
+    placessidebar row.activatable label {
+      color: #C3C7D1;
+      padding-left: 30px; }
+    placessidebar row.activatable .sidebarrow-icon, placessidebar row.activatable image {
+      color: #9ecfa2; }
+    placessidebar row.activatable:hover {
+      transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      color: rgba(0, 0, 0, 0.76);
+      background-color: transparent;
+      /*rgba(65,67,75,0.4); */
+      background-image: linear-gradient(to right, #1b232d 40px, #202435 40px, #202435 97%); }
+    placessidebar row.activatable:selected {
+      background-color: transparent;
+      background-image: linear-gradient(to right, #c50ed2 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+      placessidebar row.activatable:selected, placessidebar row.activatable:selected image {
+        color: rgba(255, 255, 255, 0.938); }
+      placessidebar row.activatable:selected label {
+        color: #c50ed2; }
+      placessidebar row.activatable:selected:backdrop {
+        color: rgba(254, 254, 254, 0.5);
         background-color: transparent;
-        /*rgba(65,67,75,0.4); */
-        background-image: linear-gradient(to right, #1b232d 40px, #202435 40px, #202435 97%); }
-      placessidebar row.sidebar-row:selected {
-        color: rgba(255, 255, 255, 0.938);
-        background-color: transparent;
-        background-image: linear-gradient(to right, #c50ed2 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-        placessidebar row.sidebar-row:selected label {
-          color: #c50ed2; }
-        placessidebar row.sidebar-row:selected:backdrop {
+        background-image: linear-gradient(to right, rgba(197, 14, 210, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+        placessidebar row.activatable:selected:backdrop label {
+          color: rgba(197, 14, 210, 0.6); }
+        placessidebar row.activatable:selected:backdrop .sidebar-icon, placessidebar row.activatable:selected:backdrop image {
           color: rgba(254, 254, 254, 0.5);
-          background-color: transparent;
-          background-image: linear-gradient(to right, rgba(197, 14, 210, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-          placessidebar row.sidebar-row:selected:backdrop label {
-            color: rgba(197, 14, 210, 0.6); }
-          placessidebar row.sidebar-row:selected:backdrop .sidebar-icon {
-            color: rgba(254, 254, 254, 0.5);
-            -gtk-icon-shadow: 0 1px rgba(254, 254, 254, 0.3); }
-        placessidebar row.sidebar-row:selected .sidebar-icon {
-          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
-          color: inherit; }
-      placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
-        color: #f9dc5c; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled) {
-        box-shadow: inset 0 1px #71f79f, inset 0 -1px #71f79f; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
-          color: #71f79f; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
-          background: #71f79f; }
-          placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
-            color: #fefefe; }
+          -gtk-icon-shadow: 0 1px rgba(254, 254, 254, 0.3); }
+      placessidebar row.activatable:selected:hover {
+        color: #ffffff;
+        background-color: rgba(197, 14, 210, 0.2); }
+        placessidebar row.activatable:selected:hover .sidebar-icon, placessidebar row.activatable:selected:hover image {
+          color: #ffffff;
+          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8); }
+      placessidebar row.activatable:selected .sidebar-icon {
+        -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
+        color: inherit; }
+    placessidebar row.activatable.sidebar-new-bookmark-row, placessidebar row.activatable.sidebar-new-bookmark-row label, placessidebar row.activatable.sidebar-new-bookmark-row .sidebar-icon {
+      color: #f9dc5c; }
+    placessidebar row.activatable:drop(active):not(:disabled) {
+      box-shadow: inset 0 1px #71f79f, inset 0 -1px #71f79f; }
+      placessidebar row.activatable:drop(active):not(:disabled), placessidebar row.activatable:drop(active):not(:disabled) label, placessidebar row.activatable:drop(active):not(:disabled) image {
+        color: #71f79f; }
+      placessidebar row.activatable:drop(active):not(:disabled):selected {
+        background: #71f79f; }
+        placessidebar row.activatable:drop(active):not(:disabled):selected, placessidebar row.activatable:drop(active):not(:disabled):selected label, placessidebar row.activatable:drop(active):not(:disabled):selected image {
+          color: #fefefe; }
   placessidebar list {
     background-color: transparent; }
     placessidebar list:backdrop {
