--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -123,73 +123,79 @@ placessidebar {
 												$_sidebar_color 35px,$_sidebar_color 36px,
 												$_sidebar_color 36px,$_sidebar_color 99%, 
 												$_sidebar_color 100%);
-		row{
+		row.activatable {
       padding: 2px 11px;
-			&.sidebar-row {
-        margin: 0;
-        border-radius: 0;
+      margin: 0;
+      border-radius: 0;
 
-        label { 
-          color: $fg_color; 
-          padding-left: 30px;
-        }
-        
-				&.sidebar-row .sidebarrow-icon { color: #9ecfa2; }
-				
-				&:hover{
-					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-					color: rgba(0,0,0,0.76);
-					background-color: transparent; /*rgba(65,67,75,0.4); */
-					background-image:linear-gradient(to right, lighten(#171e27, 2%) 40px, lighten($_sidebar_color, 5%) 40px, lighten($_sidebar_color, 5%) 97%);
-				}
+      label { 
+        color: $fg_color; 
+        padding-left: 30px;
+      }
+      
+     .sidebarrow-icon, image { color: #9ecfa2; }
+      
+      &:hover{
+        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        color: rgba(0,0,0,0.76);
+        background-color: transparent; /*rgba(65,67,75,0.4); */
+        background-image:linear-gradient(to right, lighten(#171e27, 2%) 40px, lighten($_sidebar_color, 5%) 40px, lighten($_sidebar_color, 5%) 97%);
+      }
 
-				&:selected{
+      &:selected{
 
-					color: rgba(255, 255, 255, 0.938);
-          label { color: $selected_bg_color; }
+        &, image { color: rgba(255, 255, 255, 0.938); }
+        label { color: $selected_bg_color; }
 
-					background-color: transparent;
-					background-image:linear-gradient(to right, $selected_bg_color 40px,
-																rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
+        background-color: transparent;
+        background-image:linear-gradient(to right, $selected_bg_color 40px,
+                              rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
 
-          &:backdrop{
+        &:backdrop{
+          color: $backdrop_selected_fg_color;
+          label { color: $backdrop_selected_bg_color; }
+          background-color: transparent;
+          background-image:linear-gradient(to right, $backdrop_selected_bg_color 40px,
+                                rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
+
+          .sidebar-icon, image {
             color: $backdrop_selected_fg_color;
-            label { color: $backdrop_selected_bg_color; }
-            background-color: transparent;
-            background-image:linear-gradient(to right, $backdrop_selected_bg_color 40px,
-                                  rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
-
-            .sidebar-icon {
-              color: $backdrop_selected_fg_color;
-              -gtk-icon-shadow: 0 1px transparentize($backdrop_selected_fg_color, 0.2);
-            }
-          }
-
-					.sidebar-icon {
-						-gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
-						color: inherit; 
-					}
-				}
-
-        &.sidebar-new-bookmark-row { 
-          &, label, .sidebar-icon {
-            color: $yellow; 
+            -gtk-icon-shadow: 0 1px transparentize($backdrop_selected_fg_color, 0.2);
           }
         }
 
-        &:drop(active):not(:disabled) {
-          &, label, image { color: $drop_target_color; }
-    
-          box-shadow: inset 0 1px $drop_target_color,
-                      inset 0 -1px $drop_target_color;
-    
-          &:selected {
-            &, label, image { color: $selected_fg_color; }
-            background: $drop_target_color;
+        &:hover{
+          color: #ffffff;
+          background-color: transparentize($selected_bg_color, 0.8);
+          .sidebar-icon, image {
+            color: #ffffff;
+            -gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
           }
         }
 
-			}
+        .sidebar-icon {
+          -gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
+          color: inherit; 
+        }
+      }
+
+      &.sidebar-new-bookmark-row { 
+        &, label, .sidebar-icon {
+          color: $yellow; 
+        }
+      }
+
+      &:drop(active):not(:disabled) {
+        &, label, image { color: $drop_target_color; }
+  
+        box-shadow: inset 0 1px $drop_target_color,
+                    inset 0 -1px $drop_target_color;
+  
+        &:selected {
+          &, label, image { color: $selected_fg_color; }
+          background: $drop_target_color;
+        }
+      }
 		}
 	
 	list{ 
